# incline3d-gtk

./: .gitattributes  .gitignore  ALGORITHMS.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DATA_MODEL.md  FILE_FORMATS.md  LICENSE  README.md  TEST_PLAN.md  UI_SPEC.md
.github/workflows/: build.yml
docs/: ANALYSES.md  COMPATIBILITY_MATRIX.md  DIAGNOSTICS.md  FILE_FORMATS.md  MANUAL_REGRESSION.md  diagrams.md  glossary.md
src/app/: diagnostics_runner.cpp  diagnostics_runner.hpp  main.cpp  render_selftest.cpp  render_selftest.hpp
src/core/: analysis.cpp  analysis.hpp  angle_utils.cpp  angle_utils.hpp  diagnostics.cpp  diagnostics.hpp  dogleg.cpp  dogleg.hpp  errors.cpp  errors.hpp  processing.cpp  processing.hpp  trajectory.cpp  trajectory.hpp
src/io/: analysis_report_writer.cpp  analysis_report_writer.hpp  csv_reader.cpp  csv_reader.hpp  csv_writer.cpp  csv_writer.hpp  diagnostics_writer.cpp  diagnostics_writer.hpp  file_utils.cpp  file_utils.hpp  format_registry.cpp  format_registry.hpp  las_reader.cpp  las_reader.hpp  las_writer.cpp  las_writer.hpp  project_io.cpp  project_io.hpp  text_utils.cpp  text_utils.hpp  zak_reader.cpp  zak_reader.hpp  zak_writer.cpp  zak_writer.hpp
src/model/: diagnostics.hpp  interval_data.hpp  measurement.hpp  processed_point.hpp  project.hpp  project_point.hpp  shot_point.hpp  types.cpp  types.hpp  units.hpp  validation.hpp  well_result.hpp
src/rendering/: cairo_utils.hpp  camera.cpp  camera.hpp  plan_renderer.cpp  plan_renderer.hpp  shader_program.cpp  shader_program.hpp  trajectory_renderer.cpp  trajectory_renderer.hpp  vertical_renderer.cpp  vertical_renderer.hpp
src/ui/: analyses_dialog.cpp  analyses_dialog.hpp  application.cpp  application.hpp  diagnostics_dialog.cpp  diagnostics_dialog.hpp  main_window.cpp  main_window.hpp
tests/: test_main.cpp
tests/fixtures/: Incl.csv  azimuth_wrap_360.json  gir1.las  inclined_east_45.json  vertical_well.json
tests/integration/: test_diagnostics_cli.cpp  test_import_csv_incl.cpp  test_import_las_gir1.cpp  test_render_selftest.cpp
tests/parity/: test_parity_trajectory.cpp
tests/unit/: test_analysis_reports.cpp  test_angle_utils.cpp  test_azimuth_processing.cpp  test_csv_detection.cpp  test_diagnostics_core.cpp  test_las_detection.cpp  test_project_io.cpp  test_trajectory.cpp  test_vertical_renderer.cpp  test_zak_writer.cpp
